added styling and html tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <link href="index.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <main> 
+        <form action="submit" id="survey-form">
+            <h1 id="title">contact</h1>
+            <br/>
+            <br/>
+            <label id="name-label">naam:</label>
+            <input type="text" name="name" id="first-name" placeholder="voornaam..."/>
+            <input type="text" name="name" id="last-name" placeholder="achternaam..."/>
+            <br/><br/>
+            <label id="email-label">email:</label>
+            <input type="email" name="email" id="email" placeholder="email..."/>
+            <br/><br/>
+            <label id="number-label">nummer:</label>
+            <select>
+                <option value="NL">+31</option>
+                <option value="FR">+33</option>
+                <option value="IT">+39</option>
+                <option value="DU">+49</option>
+            </select>
+            <input type="number" name="number" id="number" placeholder="########" min="0" max="1000000000"/>
+            <br/><br/>
+            <label id="message-label">bericht:</label>
+            <br/><br/>
+            <textarea id="message" placeholder="jouw bericht..."></textarea>
+            <br/><br/>
+            <hr/>
+            <br/>
+            <input type="submit" name="submit" id="submit">
+        </form>
+    </main>
 </body>
 </html>
