--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <br/>
             <br/>
             <label id="name-label">naam:</label>
-            <input type="text" name="name" id="first-name" placeholder="voornaam..."/>
-            <input type="text" name="name" id="last-name" placeholder="achternaam..."/>
+            <input type="text" name="name" id="first-name" placeholder=" voornaam..."/>
+            <input type="text" name="name" id="last-name" placeholder=" achternaam..."/>
             <br/><br/>
             <label id="email-label">email:</label>
-            <input type="email" name="email" id="email" placeholder="email..."/>
+            <input type="email" name="email" id="email" placeholder=" email..."/>
             <br/><br/>
             <label id="number-label">nummer:</label>
             <select>
@@ -27,16 +27,20 @@
                 <option value="IT">+39</option>
                 <option value="DU">+49</option>
             </select>
-            <input type="number" name="number" id="number" placeholder="########" min="0" max="1000000000"/>
+            <input type="number" name="number" id="number" placeholder=" ########" min="0" max="1000000000"/>
             <br/><br/>
             <label id="message-label">bericht:</label>
             <br/><br/>
-            <textarea id="message" placeholder="jouw bericht..."></textarea>
+            <textarea id="message" placeholder=" jouw bericht..." ></textarea>
             <br/><br/>
             <hr/>
             <br/>
             <input type="submit" name="submit" id="submit">
         </form>
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+        <div class="line line3"></div>
+        <div class="line line4"></div>
     </main>
 </body>
 </html>
